src/compiletest/tcell-01.stderr
error[E0599]: no method named `clone` found for type `qcell::TCellOwner<main::Marker>` in the current scope
  --> $DIR/tcell-01.rs:10:25
   |
10 |     let owner2 = owner1.clone();  // Compile fail
   |                         ^^^^^ method not found in `qcell::TCellOwner<main::Marker>`
